// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders consistently 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: var(--btn-text,#24292f);
  background-color: var(--btn-bg,#f6f8fa);
  border: 1px solid var(--btn-border,rgba(27,31,36,0.15));
  box-shadow: var(--btn-shadow,0 1px 0 rgba(27,31,36,0.04)),var(--btn-insetShadow,inset 0 1px 0 rgba(255,255,255,0.25));
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  background-color: var(--btn-hoverBg,#f3f4f6);
  border-color: var(--btn-hoverBorder,rgba(27,31,36,0.15));
}

.c0:focus {
  outline: solid 2px var(--accent-fg,#0969da);
}

.c0:active {
  background-color: var(--btn-selectedBg,hsla(220,14%,94%,1));
}

.c0:disabled {
  color: var(--primer-fg-disabled,#8c959f);
  background-color: var(--btn-bg,#f6f8fa);
  border-color: var(--btn-border,rgba(27,31,36,0.15));
}

<button
  className="c0"
/>
`;

exports[`Button respects the "disabled" prop 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: var(--btn-text,#24292f);
  background-color: var(--btn-bg,#f6f8fa);
  border: 1px solid var(--btn-border,rgba(27,31,36,0.15));
  box-shadow: var(--btn-shadow,0 1px 0 rgba(27,31,36,0.04)),var(--btn-insetShadow,inset 0 1px 0 rgba(255,255,255,0.25));
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  background-color: var(--btn-hoverBg,#f3f4f6);
  border-color: var(--btn-hoverBorder,rgba(27,31,36,0.15));
}

.c0:focus {
  outline: solid 2px var(--accent-fg,#0969da);
}

.c0:active {
  background-color: var(--btn-selectedBg,hsla(220,14%,94%,1));
}

.c0:disabled {
  color: var(--primer-fg-disabled,#8c959f);
  background-color: var(--btn-bg,#f6f8fa);
  border-color: var(--btn-border,rgba(27,31,36,0.15));
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonDanger renders consistently 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: var(--btn-danger-text,#cf222e);
  border: 1px solid var(--btn-border,rgba(27,31,36,0.15));
  background-color: var(--btn-bg,#f6f8fa);
  box-shadow: var(--btn-shadow,0 1px 0 rgba(27,31,36,0.04));
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  color: var(--btn-danger-hoverText,#ffffff);
  background-color: var(--btn-danger-hoverBg,#a40e26);
  border-color: var(--btn-danger-hoverBorder,rgba(27,31,36,0.15));
  box-shadow: var(--btn-danger-hoverShadow,0 1px 0 rgba(27,31,36,0.1));
}

.c0:active {
  color: var(--btn-danger-selectedText,#ffffff);
  background-color: var(--btn-danger-selectedBg,hsla(356,72%,44%,1));
  box-shadow: var(--btn-danger-selectedShadow,inset 0 1px 0 rgba(76,0,20,0.2));
  border-color: var(--btn-danger-selectedBorder,rgba(27,31,36,0.15));
}

.c0:disabled {
  color: var(--btn-danger-disabledText,rgba(207,34,46,0.5));
  background-color: var(--btn-danger-disabledBg,#f6f8fa);
}

<button
  className="c0"
/>
`;

exports[`ButtonDanger renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: var(--btn-danger-text,#cf222e);
  border: 1px solid var(--btn-border,rgba(27,31,36,0.15));
  background-color: var(--btn-bg,#f6f8fa);
  box-shadow: var(--btn-shadow,0 1px 0 rgba(27,31,36,0.04));
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  color: var(--btn-danger-hoverText,#ffffff);
  background-color: var(--btn-danger-hoverBg,#a40e26);
  border-color: var(--btn-danger-hoverBorder,rgba(27,31,36,0.15));
  box-shadow: var(--btn-danger-hoverShadow,0 1px 0 rgba(27,31,36,0.1));
}

.c0:active {
  color: var(--btn-danger-selectedText,#ffffff);
  background-color: var(--btn-danger-selectedBg,hsla(356,72%,44%,1));
  box-shadow: var(--btn-danger-selectedShadow,inset 0 1px 0 rgba(76,0,20,0.2));
  border-color: var(--btn-danger-selectedBorder,rgba(27,31,36,0.15));
}

.c0:disabled {
  color: var(--btn-danger-disabledText,rgba(207,34,46,0.5));
  background-color: var(--btn-danger-disabledBg,#f6f8fa);
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonGroup renders consistently 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  isolation: isolate;
}

.c0.c0 > * {
  position: relative;
  border-right-width: 0;
  border-radius: 0;
}

.c0.c0 > *:first-child {
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  margin-right: 0;
}

.c0.c0 > *:not(:first-child) {
  margin-left: 0;
  margin-right: 0;
}

.c0.c0 > *:last-child {
  border-right-width: 1px;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
}

.c0.c0 > *:focus,
.c0.c0 > *:active {
  z-index: 1;
}

<div
  className="c0"
/>
`;

exports[`ButtonInvisible renders consistently 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: var(--btn-outline-text,#0969da);
  border: 1px solid var(--btn-border,rgba(27,31,36,0.15));
  background-color: var(--btn-bg,#f6f8fa);
  box-shadow: var(--btn-shadow,0 1px 0 rgba(27,31,36,0.04));
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  color: var(--btn-outline-hoverText,#ffffff);
  background-color: var(--btn-outline-hoverBg,#0969da);
  border-color: var(--btn-outline-hoverBorder,rgba(27,31,36,0.15));
  box-shadow: var(--btn-outline-hoverShadow,0 1px 0 rgba(27,31,36,0.1));
}

.c0:active {
  color: var(--btn-outline-selectedText,#ffffff);
  background-color: var(--btn-outline-selectedBg,hsla(212,92%,42%,1));
  box-shadow: var(--btn-outline-selectedShadow,inset 0 1px 0 rgba(0,33,85,0.2));
  border-color: var(--btn-outline-selectedBorder,rgba(27,31,36,0.15));
}

.c0:disabled {
  color: var(--btn-outline-disabledText,rgba(9,105,218,0.5));
  background-color: var(--btn-outline-disabledBg,#f6f8fa);
  border-color: var(--btn-border,rgba(27,31,36,0.15));
}

<button
  className="c0"
/>
`;

exports[`ButtonInvisible renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: var(--accent-fg,#0969da);
  background-color: transparent;
  border: 0;
  border-radius: 6px;
  box-shadow: none;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:disabled {
  color: var(--primer-fg-disabled,#8c959f);
}

.c0:focus {
  outline: solid 2px var(--accent-fg,#0969da);
}

.c0:hover {
  background-color: var(--btn-hoverBg,#f3f4f6);
}

.c0:active {
  background-color: var(--btn-selectedBg,hsla(220,14%,94%,1));
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonOutline renders consistently 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: var(--btn-outline-text,#0969da);
  border: 1px solid var(--btn-border,rgba(27,31,36,0.15));
  background-color: var(--btn-bg,#f6f8fa);
  box-shadow: var(--btn-shadow,0 1px 0 rgba(27,31,36,0.04));
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  color: var(--btn-outline-hoverText,#ffffff);
  background-color: var(--btn-outline-hoverBg,#0969da);
  border-color: var(--btn-outline-hoverBorder,rgba(27,31,36,0.15));
  box-shadow: var(--btn-outline-hoverShadow,0 1px 0 rgba(27,31,36,0.1));
}

.c0:active {
  color: var(--btn-outline-selectedText,#ffffff);
  background-color: var(--btn-outline-selectedBg,hsla(212,92%,42%,1));
  box-shadow: var(--btn-outline-selectedShadow,inset 0 1px 0 rgba(0,33,85,0.2));
  border-color: var(--btn-outline-selectedBorder,rgba(27,31,36,0.15));
}

.c0:disabled {
  color: var(--btn-outline-disabledText,rgba(9,105,218,0.5));
  background-color: var(--btn-outline-disabledBg,#f6f8fa);
  border-color: var(--btn-border,rgba(27,31,36,0.15));
}

<button
  className="c0"
/>
`;

exports[`ButtonOutline renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: var(--btn-outline-text,#0969da);
  border: 1px solid var(--btn-border,rgba(27,31,36,0.15));
  background-color: var(--btn-bg,#f6f8fa);
  box-shadow: var(--btn-shadow,0 1px 0 rgba(27,31,36,0.04));
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  color: var(--btn-outline-hoverText,#ffffff);
  background-color: var(--btn-outline-hoverBg,#0969da);
  border-color: var(--btn-outline-hoverBorder,rgba(27,31,36,0.15));
  box-shadow: var(--btn-outline-hoverShadow,0 1px 0 rgba(27,31,36,0.1));
}

.c0:active {
  color: var(--btn-outline-selectedText,#ffffff);
  background-color: var(--btn-outline-selectedBg,hsla(212,92%,42%,1));
  box-shadow: var(--btn-outline-selectedShadow,inset 0 1px 0 rgba(0,33,85,0.2));
  border-color: var(--btn-outline-selectedBorder,rgba(27,31,36,0.15));
}

.c0:disabled {
  color: var(--btn-outline-disabledText,rgba(9,105,218,0.5));
  background-color: var(--btn-outline-disabledBg,#f6f8fa);
  border-color: var(--btn-border,rgba(27,31,36,0.15));
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonPrimary renders consistently 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: var(--btn-primary-text,#ffffff);
  border: 1px solid var(--btn-primary-border,rgba(27,31,36,0.15));
  background-color: var(--btn-primary-bg,#2da44e);
  box-shadow: var(--btn-primary-shadow,0 1px 0 rgba(27,31,36,0.1));
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  background-color: var(--btn-primary-hoverBg,#2c974b);
  border-color: var(--btn-primary-hoverBorder,rgba(27,31,36,0.15));
}

.c0:active {
  background-color: var(--btn-primary-selectedBg,hsla(137,55%,36%,1));
  box-shadow: var(--btn-primary-selectedShadow,inset 0 1px 0 rgba(0,45,17,0.2));
}

.c0:disabled {
  color: var(--btn-primary-disabledText,rgba(255,255,255,0.8));
  background-color: var(--btn-primary-disabledBg,#94d3a2);
  border-color: var(--btn-primary-disabledBorder,rgba(27,31,36,0.15));
}

<button
  className="c0"
/>
`;

exports[`ButtonPrimary renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: var(--btn-primary-text,#ffffff);
  border: 1px solid var(--btn-primary-border,rgba(27,31,36,0.15));
  background-color: var(--btn-primary-bg,#2da44e);
  box-shadow: var(--btn-primary-shadow,0 1px 0 rgba(27,31,36,0.1));
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  background-color: var(--btn-primary-hoverBg,#2c974b);
  border-color: var(--btn-primary-hoverBorder,rgba(27,31,36,0.15));
}

.c0:active {
  background-color: var(--btn-primary-selectedBg,hsla(137,55%,36%,1));
  box-shadow: var(--btn-primary-selectedShadow,inset 0 1px 0 rgba(0,45,17,0.2));
}

.c0:disabled {
  color: var(--btn-primary-disabledText,rgba(255,255,255,0.8));
  background-color: var(--btn-primary-disabledBg,#94d3a2);
  border-color: var(--btn-primary-disabledBorder,rgba(27,31,36,0.15));
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonTableList renders consistently 1`] = `
.c0 {
  display: inline-block;
  padding: 0;
  font-size: 14px;
  color: var(--fg-muted,#57606a);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:disabled,
.c0:disabled:hover {
  color: var(--primer-fg-disabled,#8c959f);
  cursor: default;
}

.c0:after {
  display: inline-block;
  margin-left: 4px;
  width: 0;
  height: 0;
  vertical-align: -2px;
  content: '';
  border: 4px solid transparent;
  border-top-color: currentcolor;
}

<summary
  className="c0"
/>
`;
